# Constraint-Theory

./: .gitignore  README.md  clippy_round9.txt  sample.mhtml  test_round9.txt  verify_fix.sh  wrangler.toml
crates/constraint-theory-core/: .cargoignore  Cargo.toml  README.md
crates/constraint-theory-core/examples/: bench_comparison.rs  bench_profiled.rs  ml_demo.rs
crates/constraint-theory-core/src/: cohomology.rs  curvature.rs  edge_case_tests.rs  gauge.rs  kdtree.rs  lib.rs  manifold.rs  percolation.rs  simd.rs  tile.rs
crates/gpu-simulation/: README.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
docker/simulations/: requirements.txt
docs/: FAQ.md  README.md
launch/: README.md  executive-summary.md  index.md  summary.md
launch/checklists/: launch-day.md
launch/community/: discord-setup.md
launch/hackerrnews/: announcement.md
launch/press/: demo-script.md  press-kit.md
scripts/: dev.ps1  dev.sh  fix_critical_issues.sh  validate_links.py  validate_links.sh
web/: OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  index-optimized.html  index.html
web-simulator/: COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  STRUCTURE.txt  WEB_SIMULATOR_SUMMARY.md  package.json  worker.ts  wrangler.toml
web-simulator/docker/: Dockerfile  docker-compose.yml
web-simulator/static/: index.html
web/css/: main.css
web/docs/: ANIMATION_GUIDE.md
workers/: PYTHAGOREAN_3D_SUMMARY.md  QUICK_START_3D_PYTHAGOREAN.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
(+25 files in other folders)
