[package]
name = "constraint-theory-core"
version = "1.0.0"
edition = "2021"
description = "High-performance constraint theory engine core"
authors = ["SuperInstance Team"]
license = "MIT"
repository = "https://github.com/SuperInstance/Constraint-Theory"
documentation = "https://docs.rs/constraint-theory-core"
homepage = "https://constraint-theory.superinstance.ai"

[dependencies]

[dev-dependencies]
rand = "0.8"

[features]
default = []
simd = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
